--- a/frontend/src/app/shared/datepicker/datepicker.component.html
+++ b/frontend/src/app/shared/datepicker/datepicker.component.html
@@ -1,6 +1,7 @@
 <div class="calendar-container">
   <mat-form-field class="calendar-field">
     <input matInput class="wider-input" [matDatepicker]="picker"
+      [value]="defaultDate | date:'dd/MM/yyyy'" 
       placeholder="Data" [ngModel]="defaultDate"
       (dateChange)="onDateChange($event.value)">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
