bugfix#44: changes in about component to be open as a part of menu to a children routing which blocked change rute until about windows is open, changes in deployment-db.yaml and mian.py

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -4,7 +4,7 @@
     <div class="center-content">
       <p>is software to create meetings</p>
       <button mat-stroked-button class="margin-top-10px"
-        routerLink="/">close</button>
+        (click)="changeVisibility()">close</button>
     </div>
   </div>
 </div>
