bugfix#44.4: changed action.yaml for git to use ROBOT name and password not a owner, changed css in dialog-info component

--- a/frontend/src/app/dialog-info/dialog-info.component.css
+++ b/frontend/src/app/dialog-info/dialog-info.component.css
@@ -75,6 +75,18 @@ h4 {
     align-items: center;
     justify-content: center;
 }
+.dialog {
+    width: 75vw;
+}
+
+.expansion-panel-title {
+    flex-grow: 8;
+}
+
+.expansion-panel-description {
+    flex-grow: 1;
+}
+
 
 @media only screen and (max-height: 750px) {
     .scrollable-content {
