--- a/frontend/src/app/dialog-info/dialog-info.component.html
+++ b/frontend/src/app/dialog-info/dialog-info.component.html
@@ -39,8 +39,8 @@
                         (opened)="panelOpenState = true"
                         (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
-                            <mat-panel-title>Agendas</mat-panel-title>
-                            <mat-panel-description>
+                            <mat-panel-title class="expansion-panel-title">Agendas</mat-panel-title>
+                            <mat-panel-description class="expansion-panel-description">
                                 {{panelOpenState ? 'Close Details' :
                                 'Open Details'}}
                             </mat-panel-description>
@@ -64,8 +64,8 @@
                         (opened)="panelOpenState = true"
                         (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
-                            <mat-panel-title>Documnets</mat-panel-title>
-                            <mat-panel-description>
+                            <mat-panel-title class="expansion-panel-title">Documnets</mat-panel-title>
+                            <mat-panel-description class="expansion-panel-description">
                                 {{panelOpenState ? 'Close Details' :
                                 'Open Details'}}
                             </mat-panel-description>
