--- a/frontend/src/app/dialog-list/dialog-list.component.html
+++ b/frontend/src/app/dialog-list/dialog-list.component.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-
+            <h3>Agenda order:</h3>
             <div class="line-items">
                 <div class="bottom-input">
                     <input matInput class="custom-input " matInput type="text"
